// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`devDep workflow macos: build-env dep snapshot 1`] = `
"# Build environment for dep@path:dep

#
# dep@1.0.0
#
export OCAMLFIND_LDCONF=\\"ignore\\"
export OCAMLFIND_DESTDIR=\\"%esyStorePath%/s/%id%/lib\\"
export cur__etc=\\"%esyStorePath%/s/%id%/etc\\"
export cur__share=\\"%esyStorePath%/s/%id%/share\\"
export cur__toplevel=\\"%esyStorePath%/s/%id%/toplevel\\"
export cur__stublibs=\\"%esyStorePath%/s/%id%/stublibs\\"
export cur__doc=\\"%esyStorePath%/s/%id%/doc\\"
export cur__man=\\"%esyStorePath%/s/%id%/man\\"
export cur__lib=\\"%esyStorePath%/s/%id%/lib\\"
export cur__sbin=\\"%esyStorePath%/s/%id%/sbin\\"
export cur__bin=\\"%esyStorePath%/s/%id%/bin\\"
export cur__install=\\"%esyStorePath%/s/%id%\\"
export cur__target_dir=\\"%esyStorePath%/b/%id%\\"
export cur__original_root=\\"%esyPrefixPath%/esyi/source/i/dep--67b360d9a56facfd6fc9b90817f589ec\\"
export cur__root=\\"%esyStorePath%/b/%id%\\"
export cur__dev=\\"false\\"
export cur__version=\\"1.0.0\\"
export cur__name=\\"dep\\"

#
# Built-in
#
export SHELL=\\"env -i /bin/bash --norc --noprofile\\"
export PATH=\\"$PATH:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin\\""
`;

exports[`devDep workflow macos: build-env devDep snapshot 1`] = `
"# Build environment for devDep@path:devDep

#
# devDep@1.0.0
#
export OCAMLFIND_LDCONF=\\"ignore\\"
export OCAMLFIND_DESTDIR=\\"%esyStorePath%/s/%id%/lib\\"
export cur__etc=\\"%esyStorePath%/s/%id%/etc\\"
export cur__share=\\"%esyStorePath%/s/%id%/share\\"
export cur__toplevel=\\"%esyStorePath%/s/%id%/toplevel\\"
export cur__stublibs=\\"%esyStorePath%/s/%id%/stublibs\\"
export cur__doc=\\"%esyStorePath%/s/%id%/doc\\"
export cur__man=\\"%esyStorePath%/s/%id%/man\\"
export cur__lib=\\"%esyStorePath%/s/%id%/lib\\"
export cur__sbin=\\"%esyStorePath%/s/%id%/sbin\\"
export cur__bin=\\"%esyStorePath%/s/%id%/bin\\"
export cur__install=\\"%esyStorePath%/s/%id%\\"
export cur__target_dir=\\"%esyStorePath%/b/%id%\\"
export cur__original_root=\\"%esyPrefixPath%/esyi/source/i/devdep--6e88dff5673a130a450ce61f64675503\\"
export cur__root=\\"%esyStorePath%/b/%id%\\"
export cur__dev=\\"false\\"
export cur__version=\\"1.0.0\\"
export cur__name=\\"devDep\\"

#
# Built-in
#
export SHELL=\\"env -i /bin/bash --norc --noprofile\\"
export PATH=\\"$PATH:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin\\""
`;

exports[`devDep workflow macos: build-env snapshot 1`] = `
"# Build environment for withDevDep@link:./package.json

#
# dep@1.0.0
#
export CAML_LD_LIBRARY_PATH=\\"%esyStorePath%/i/dep-e7448809/stublibs:%esyStorePath%/i/dep-e7448809/lib/stublibs:$CAML_LD_LIBRARY_PATH\\"
export OCAMLPATH=\\"%esyStorePath%/i/dep-e7448809/lib:$OCAMLPATH\\"
export MAN_PATH=\\"%esyStorePath%/i/dep-e7448809/man:$MAN_PATH\\"
export PATH=\\"%esyStorePath%/i/dep-e7448809/bin:$PATH\\"

#
# withDevDep@1.0.0
#
export OCAMLFIND_LDCONF=\\"ignore\\"
export OCAMLFIND_DESTDIR=\\"%projectPath%/_esy/default/store/i/%id%/lib\\"
export cur__etc=\\"%projectPath%/_esy/default/store/i/%id%/etc\\"
export cur__share=\\"%projectPath%/_esy/default/store/i/%id%/share\\"
export cur__toplevel=\\"%projectPath%/_esy/default/store/i/%id%/toplevel\\"
export cur__stublibs=\\"%projectPath%/_esy/default/store/i/%id%/stublibs\\"
export cur__doc=\\"%projectPath%/_esy/default/store/i/%id%/doc\\"
export cur__man=\\"%projectPath%/_esy/default/store/i/%id%/man\\"
export cur__lib=\\"%projectPath%/_esy/default/store/i/%id%/lib\\"
export cur__sbin=\\"%projectPath%/_esy/default/store/i/%id%/sbin\\"
export cur__bin=\\"%projectPath%/_esy/default/store/i/%id%/bin\\"
export cur__install=\\"%projectPath%/_esy/default/store/i/%id%\\"
export cur__target_dir=\\"%projectPath%/_esy/default/store/b/%id%\\"
export cur__original_root=\\"%projectPath%\\"
export cur__root=\\"%projectPath%\\"
export cur__dev=\\"true\\"
export cur__version=\\"1.0.0\\"
export cur__name=\\"withDevDep\\"
export DUNE_BUILD_DIR=\\"%projectPath%/_esy/default/store/b/%id%\\"

#
# Built-in
#
export SHELL=\\"env -i /bin/bash --norc --noprofile\\"
export PATH=\\"$PATH:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin\\""
`;
